--- a/about.html
+++ b/about.html
@@ -91,18 +91,17 @@
       <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
         <div class="row">
           <div class="content">
-            <h2 class="lang text-center">О нас</h2>
-              <h3 class="lang header" key="about2"></h3>
-              <p>Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</p>
-              <p>Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</p>
-              <p>Свою охранную деятельность хозяйственное общество «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
-              <p>Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
-              <p> Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.</p>
-              <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
-              <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
-              <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
-              <p style="font-size: 24px; font-weight:bolder ;">Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
-          </div>
+            <h2 class="lang text-center" key="aboutus_title">О нас</h2>
+              <p class="lang" key="about_p1" >Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</p>
+              <p class="lang" key="about_p2" >Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</p>
+              <p class="lang" key="about_p3" >Свою охранную деятельность хозяйственное общество «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
+              <p class="lang" key="about_p4" >Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
+              <p class="lang" key="about_p5" >Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.</p>
+              <p class="lang" key="about_p6" >С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+              <p class="lang" key="about_p7" >Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
+              <p class="lang" key="about_p8" >Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
+              <p class="lang" key="about_p9"  style="font-size: 24px; font-weight:bolder ;">Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
+          </div> 
         </div>
       </div>
     </section><!-- End About Section -->
@@ -156,9 +155,9 @@
                 <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
                   <div class="row">
                     <div class="content">
-                      <h2 class="lang text-center">ДИВЕРСИФИКАЦИЯ ПРЕДПРИЯТИЯ</h2>
+                      <h2 class="lang text-center" key="diversifikasiya_title" >ДИВЕРСИФИКАЦИЯ ПРЕДПРИЯТИЯ</h2>
                         <h3 class="lang header" key="about2"></h3>
-                        <p>С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
+                        <p class="lang" key="diversifikasiya_text">С целью диверсификации деятельности хозяйственного общества в 2020 году была налажена работа по техническому обслуживанию автомобилей и предоставления услуг по общественному питанию, а также в январе 2021 года был заключен контракт с Агентством Государственной рыбоохраны и контролю за водными биоресурсами Туркменистана по добыче рыбы и биоресурсов  на Туркменской части акватории Каспийского моря. Кроме этого предприятие держит торговые отношения с такими странами как ОАЭ, Китай, Турция, Россия, Азербайджан и Казахстан.</p>
                         <div class="balykcylyk container duzetmeli"><img class="img-fluid" src="images/autoservice/fdf.jpg" alt=""><h5 class="aciklama text-center" >АВТОСЕРВИС</h5></div>
                         <!-- <div class="balykcylyk container"><img class="img-fluid" src="images/fishing/wild-files-marine-debris-removal.jpg" alt=""><h5 class="aciklama text-center">рыболовство</h5></div> -->
                       </div>
@@ -172,7 +171,7 @@
     <section id="clients">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2 class="lang text-center">НАШИ ЗАРУБЕЖНЫЕ ТОРГОВЫЕ ПРЕДСТАВИТЕЛИ</h2>
+          <h2 class="lang text-center" key="our_clients">НАШИ ЗАРУБЕЖНЫЕ ТОРГОВЫЕ ПРЕДСТАВИТЕЛИ</h2>
           <!-- <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p> -->
         </div>
 
@@ -200,39 +199,39 @@
 <section id="about" style="padding-top: 50px;">
   <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">       
       <div class="content">
-        <h2 class="lang text-center">БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
-          <h3 class="lang header text-center" key="about2" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
+        <h2 class="lang text-center" key="charity_title" >БЛАГОТВОРИТЕЛЬНОСТЬ</h2>
+          <h3 class="lang header text-center" key="charity_h3" style="font:28px; font-weight: bold;">«Добрые дела дают силы нам самим и побуждают к добрым поступкам других»</h3>
             <div class="row mb-3 mt-5">
               <img class="img-fluid col-lg-4" src="images/ToreAhunMetjidi.jpg" alt="Töre Ahun Metjidi">
-              <P class="col-lg-8 text-end">Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
+              <P class="col-lg-8 text-end lang" key="charity_1" >Хозяйственное общество «Зехинли доганлар» начиная с 2019 года занимается благотворительной деятельностью. Первый шаг был сделан в апреле 2019 года путем внесения денежных средств на строительство главной мечети Балканского велаята в городе Балканабат.</P>
             </div>
             <!-- <P id="abzas">Так же до сегодняшнего дня была оказана материальная помощь</P> -->
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/reabilitasiya copy.jpg" style="height: 92.1%;" alt="FLYER"></div>
                 <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/asgabat.jpg"><img class="ramka" style="width:100%" src="images/minnetdarlyk/asgabat.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-6 text-end">Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат.</p>
+                <p class="col-6 text-end lang" key="charity_2" >Для обеспечения восстановительного лечения инвалидов с детства и инвалидов-спортсменов нами была оказана финансовая помощь Реабилитационному Центру инвалидов Туркменистана в г. Ашгабат.</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-2 flyer"><img class="ramka" src="images/minnetdarlyk/olympiada_flyer.jpg" style="width:66%; height: auto;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near"><a target="_blank" href="images/minnetdarlyk/olimpiad.jpg"><img style="width:100%; border: 0.3px dotted grey;" src="images/minnetdarlyk/olimpiad.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-8 text-end flyer_text">С целью приобретения спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участие люди с синдромом Дауна и инвалиды по интеллекту были переданы денежные средства Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ).</p>
+                <p class="col-8 text-end flyer_text lang" key="charity_3" >С целью приобретения спортивной экипировки, спортивного инвентаря для проведения предстоящих чемпионатов по видам спорта, где принимают участие люди с синдромом Дауна и инвалиды по интеллекту были переданы денежные средства Национальному Центру Специальной  Олимпиады Туркменистана (НЦСОТ).</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-3 flyer4"><img class="ramka" src="images/minnetdarlyk/1663771252973.jpg" style="height: 100%;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near4"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk.jpg"><img style="width:100%" src="images/minnetdarlyk/minnetdarlyk.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-7 text-end">Для улучшения условий содержания детей инвалидов и организации поездок по святым местам, а также отдыха в оздоровительных центрах нами была оказана финансовая поддержка Общества слепых и глухих  в г. Балканабат  Балканского велаята.</p>
+                <p class="col-7 text-end lang" key="charity_4" >Для улучшения условий содержания детей инвалидов и организации поездок по святым местам, а также отдыха в оздоровительных центрах нами была оказана финансовая поддержка Общества слепых и глухих  в г. Балканабат  Балканского велаята.</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-4 flyer2"><img class="ramka" src="images/minnetdarlyk/muzeyin surady2.jpg" style="height: 88%;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near2"><a target="_blank" href="images/minnetdarlyk/Etrek muzeyi.jpg"><img style="width:100%" src="images/minnetdarlyk/Etrek muzeyi.jpg" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-6 text-end">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята.</p>
+                <p class="col-6 text-end lang" key="charity_5">Нами была проведена финансовая поддержка Предпринимателя Х. Годанова, который по просьбе местного населения создал историко-краеведческого музей в г. Этрек Этрекского этрапа Балканского велаята.</p>
               </div>
               <div class="row mb-3 mt-5">
                 <div class="img-fluid col-2 flyer3"><img class="ramka" src="images/minnetdarlyk/10-15.webp" style="width:92%; height: auto;" alt="FLYER"></div>
                 <div class="img-fluid col-2 flyer_near3"><a target="_blank" href="images/minnetdarlyk/minnetdarlyk2 copy.webp"><img class="ramka" style="width:100%" src="images/minnetdarlyk/minnetdarlyk2 copy.webp" alt="Minnetdarlyk haty"></a></div>
-                <p class="col-8 text-end">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь.</p>
+                <p class="col-8 text-end lang" key="charity_6">В связи с проведением дня инвалидов и людей с ограниченными возможностями, а так же содействие в улучшении оказываемых услуг со стороны Общества Инвалидов Туркменистана нами была предоставлена финансовая помощь.</p>
               </div>       
-              <p class="text-lg-center" style="font-weight: bolder; font-size: 1.6rem;">Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
+              <p class="text-lg-center lang" key="charity_end" style="font-weight: bolder; font-size: 1.6rem;">Хозяйственное общество «Зехинли доганлар» планирует продолжить благотворительную деятельность, так как лучший способ сохранить память о добрых делах-повторять их.</p>
             </div>
           </div>
 </section><!-- End Diversifikasiya -->
