--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           <li class="dropdown">
             <a href="#"><span key="active_lang" class="lang">Язык</span><i class="bi bi-chevron-down langs"></i></a>
             <ul>
-              <li><a href="#" onclick="changeLang('tm');" class="lang">Türkmen</a></li>
+              <li><a onclick="changeLang('tm');" key="turkmen" class="lang">Türkmen</a></li>
               </li>
-              <li><a href="#" onclick="changeLang('ru');" class="lang">Русский</a></li>
-              <li><a href="#" onclick="changeLang('en');" class="lang">English</a></li>
+              <li><a onclick="changeLang('ru');" key="russian" class="lang">Русский</a></li>
+              <li><a onclick="changeLang('en');" key="english" class="lang">English</a></li>
             </ul>
           </li>
         </ul>
@@ -306,7 +306,7 @@
               <li class="list_step lang" key="ls12" >Круглосуточную поддержку</li>
               <li class="list_step lang" key="ls13" >Спокойную жизнь и возможность сконцентрировать силы на своих целях, не беспокоясь о безопасности</li>
             </ul>
-            <h3 class="summary lang" key="summary" >Охранная компания <b>«Зехинли доганлар»</b> - это разумный выбор для защиты любого объекта. Мы являемся признанным лидером в области безопасности, поддерживая охранные стандарты и обеспечивая сохранность всего, за что отвечаем. </h3>
+            <h3 class="summary lang" key="summary" >Охранная компания «Зехинли доганлар» - это разумный выбор для защиты любого объекта. Мы являемся признанным лидером в области безопасности, поддерживая охранные стандарты и обеспечивая сохранность всего, за что отвечаем. </h3>
           </div>
         </section>
         <!-- END OF WORK LIST SECTION -->
@@ -317,8 +317,8 @@
             <div class="container" data-aos="zoom-out">
               <div class="text-center">
               <div >
-                  <h3 class="cta-text lang" key="section1h3">Обращаясь к ЧОП «Зехинли доганлар» </h3>
-                  <h2 class="cta-title lang" key="section1p"> «Вы сохраните свое имущество в целостности и сохранности!»</h2>
+                  <h3 class="cta-text lang" key="section2h3">Обращаясь к ЧОП «Зехинли доганлар» </h3>
+                  <h2 class="cta-title lang" key="section2p"> «Вы сохраните свое имущество в целостности и сохранности!»</h2>
                 </div>
               </div>
             </div>
@@ -345,41 +345,41 @@
 
           <section id="work-chart" data-aos="fade-right" class="container"> 
             <div class="section-header">
-              <h2 class="whywe lang" key="why_we" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
+              <h2 class="whywe lang" key="how_we_work" data-aos="fade-up"><br>КАК МЫ РАБОТАЕМ</h2>
             </div>
             <div class="grid-5x1">
           <div class="guty">
             <div class="ikonki">
               <img class="surat" src="images/icons/contract.png" alt="sagat">
             </div>
-            <div class="shapes">Договор</div>
-            <div class="work-chart-text">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
+            <div class="shapes lang" key="contract" >Договор</div>
+            <div class="work-chart-text lang" key="ct1" >Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
           </div>
           <div class="guty">
             <div class="ikonki">
               <img class="surat" src="images/icons/info.png" alt="sagat">
             </div>
             <div class="shapes even">Информация</div>
-            <div class="work-chart-text">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+            <div class="work-chart-text lang" key="ct2">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
           </div>
           <div class="guty">
             <div class="ikonki">
               <img class="surat" src="images/icons/analyze1.png" alt="search">
             </div>
             <div class="shapes">Анализ</div>
-            <div class="work-chart-text">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
+            <div class="work-chart-text lang" key="ct3">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
             </div>
           </div>
           <div class="guty">
             <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
             <div class="shapes even">Монтаж</div>
-            <div class="work-chart-text ">После согласования с Заказчиком происходит монтаж необходимого оборудования
+            <div class="work-chart-text lang" key="ct4">После согласования с Заказчиком происходит монтаж необходимого оборудования
             </div>
           </div>
           <div class="guty">
             <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
             <div class="shapes">Защита</div>
-            <div class="work-chart-text">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
+            <div class="work-chart-text lang" key="ct5">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
             </div>
           </div>
         </div>
@@ -392,7 +392,7 @@
     <section id="contact">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Связаться с нами</h2>
+          <h2 class="contact_us">Связаться с нами</h2>
         </div>
 
         <div class="row contact-info">
@@ -400,7 +400,7 @@
           <div class="col-md-4">
             <div class="contact-email">
               <i class="bi bi-envelope" style="color:black; opacity: 0.8;"></i>
-              <h3 class="lang" key="email">Email</h3>
+              <h3>Email</h3>
               <p><a href="mailto:zehinli.doganlar@mail.ru">zehinli.doganlar@mail.ru</a></p>
             </div>
           </div>
@@ -416,7 +416,7 @@
           <div class="col-md-4">
             <div class="contact-address">
               <i class="fa fa-fax mt-md-2" style="color: black; opacity: 0.8; font-size: 48px;"></i>
-              <h3 class="lang mt-md-2" key="phone_number">факс</h3>
+              <h3 class="lang mt-md-2" key="faxno">факс</h3>
               <p><a href="tel:+99324325098">+99324325098</a></p>
             </div>
           </div>
@@ -427,14 +427,14 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt" style="color: black; opacity: 0.8;"></i>
               <h3 class="lang" key="adres1">юридический Адрес</h3>
-              <address class="lang" key="adres2">POSTAL CODE????, Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
+              <address class="lang" key="adres1desc">POSTAL CODE????, Туркменистан, Балкан велаят, г.Гумдаг, <br> комплекса жилых домов 15, Дом 88.</address>
             </div>
           </div>      
           <div class="col-md-6">
             <div class="contact-address">
               <i class="bi bi-geo-alt-fill" style="color: black; opacity: 0.8;"></i>
-              <h3 class="lang" key="adres1">фактический адрес</h3>
-              <address class="lang" key="adres2">745000, Туркменистан, Балкан велаят, г.Туркменбаши, <br> торговый центр «Шагадам», кабинет №: 31</address>
+              <h3 class="lang" key="adres2">фактический адрес</h3>
+              <address class="lang" key="adres2desc">745000, Туркменистан, Балкан велаят, г.Туркменбаши, <br> торговый центр «Шагадам», кабинет №: 31</address>
             </div>
           </div>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1864.5163118837922!2d52.99090282076264!3d39.99831365970386!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf2b867eb77205430!2z0KLQvtGA0LPQvtCy0YvQuSDRhtC10L3RgtGAICLQqNCQ0JPQkNCU0JDQnCI!5e1!3m2!1sen!2sus!4v1663226696131!5m2!1sen!2sus" width="600" height="450" style="border: 4px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div>
@@ -497,7 +497,7 @@
 
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
   <script src="assets/js/db.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
