--- a/services.html
+++ b/services.html
@@ -88,10 +88,10 @@
     <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
       <div class="row">
         <div class="content">
-          <h2 class="lang text-center">услуги</h2>
-          <h3 class="lang text-center" style="font-weight: 600;">Выполнять условия договора – это одно, быть вместе с клиентом и слышать его – идея хорошего ведения бизнеса.</h3>
-          <p>ЧОП «Зехинли доганлар» предлагает полный спектр разрешенных законом охранных и иных услуг в сфере безопасности и охраны.</p>
-            <p>Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</p>
+          <h2 class="lang text-center" key="services">услуги</h2>
+          <h3 class="lang text-center" style="font-weight: 600;" key="services_h3">Выполнять условия договора – это одно, быть вместе с клиентом и слышать его – идея хорошего ведения бизнеса.</h3>
+          <p class="lang" key="services_1">ЧОП «Зехинли доганлар» предлагает полный спектр разрешенных законом охранных и иных услуг в сфере безопасности и охраны.</p>
+            <p class="lang" key="services_p1">Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</p>
           <ol>
             <li><span>Услуги физической охраны объектов</span>  - комплекс мер, направленных на обеспечение безопасности функционирования объекта, сохранности его материального имущества, защиту жизни и здоровья его персонала. В задачу физической охраны входит контроль пропускного режима, досмотр автотранспорта, предотвращение краж и хищений, обход объекта и прилегающей территории, мониторинг системы видеонаблюдения, контроль действий посетителей и сотрудников предприятия, охрана материальных ценностей, находящихся в свободном доступе, принятие первичных мер по устранению технических аварий и возгораний, предотвращение несанкционированного доступа и повышение, и поддержание высокого статуса объекта/ предприятия.</li>
             <li><span>Услуги пультовой охраны</span> – это комплекс электронных систем, позволяющих обеспечивать безопасность объекта с помощью круглосуточной передачи данных, поступающих по защищенным каналам связи на пульт мониторингового центра. Современные системы охраны значительно уменьшают риски незаконного  проникновения на территорию, позволяют оперативно принять меры по расследованию происшествия, если оно все же произошло. Если на объекте произошла чрезвычайная ситуация, система мгновенно оповещает об этом охрану. К тревожным ситуациям относят попытку взлома, незаконного проникновения, кражу имущества и подобные деяния.</li>
@@ -105,75 +105,75 @@
           <table class="table table-responsive table-hover table-bordered border-primary">
           <thead >
             <tr>
-            <th scope="col">№</th>
-            <th scope="col">Наименование</th>
-            <th scope="col">Описание</th>
-            <th scope="col">Стоимость</th>
+            <th scope="col" class="lang" key="No" >№</th>
+            <th scope="col" class="lang" key="table_name">Наименование</th>
+            <th scope="col" class="lang" key="table_desc">Описание</th>
+            <th scope="col" class="lang" key="table_price">Стоимость</th>
           </tr>
           </thead>
           <tbody>
             <tr>
-              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги физической охраны объектов</td>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;" class="lang" key="table1">Услуги физической охраны объектов</td>
             </tr>
             <tr>
               <th scope="row">1</th>
-              <td>Невооруженная охрана дневная</td>
-              <td>Дневная охрана без оружия (минимальный заказ – 12 часов)</td>
-              <td>договорная</td>
+              <td class="lang" key="rc1">Невооруженная охрана дневная</td>
+              <td class="lang" key="rc2">Дневная охрана без оружия (минимальный заказ – 12 часов)</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
               <th scope="row">2</th>
-              <td>Невооруженная охрана ночная</td>
-              <td>Ночная охрана без оружия (минимальный заказ – 12 часов)</td>
-              <td>договорная</td>
+              <td class="lang" key="r2c1">Невооруженная охрана ночная</td>
+              <td class="lang" key="r2c2">Ночная охрана без оружия (минимальный заказ – 12 часов)</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>Охрана вахтовым методом</td>
-              <td>Охрана вахтовым методом</td>
-              <td>договорная</td>
+              <td class="lang" key="r3c1">Охрана вахтовым методом</td>
+              <td class="lang" key="r3c2">Охрана вахтовым методом</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
               <th scope="row">4</th>
-              <td>Обеспечение внутри объектного и пропускного режимов</td>
-              <td>Обеспечение внутри объектного и пропускного режимов</td>
-              <td>договорная</td>
+              <td class="lang" key="r4c1">Обеспечение внутри объектного и пропускного режимов</td>
+              <td class="lang" key="r4c2">Обеспечение внутри объектного и пропускного режимов</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
-              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги по сопровождению грузов</td>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;" class="lang" key="table2">Услуги по сопровождению грузов</td>
             </tr>
             <tr>
               <th scope="row">5</th>
-              <td>Сопровождение грузов</td>
-              <td>Сопровождение грузов охранником</td>
-              <td>договорная</td>
+              <td class="lang" key="r5c1">Сопровождение грузов</td>
+              <td class="lang" key="r5c2">Сопровождение грузов охранником</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
               <th scope="row">6</th>
-              <td>Машина сопровождения</td>
-              <td>Машина сопровождения (2 охранника)</td>
-              <td>договорная</td>
+              <td class="lang" key="r6c1">Машина сопровождения</td>
+              <td class="lang" key="r6c2">Машина сопровождения (2 охранника)</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
-              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;">Услуги пультовой охраны</td>
+              <td colspan="4" style="text-align: center; font-size: larger; font-weight: bolder;" class="lang" key="table3">Услуги пультовой охраны</td>
             </tr>
             <tr>
               <th scope="row">7</th>
-              <td>Монтаж системы объектовой охраны</td>
-              <td>Монтаж системы объектовой охраны малой, средней, большой емкости</td>
-              <td>договорная</td>
+              <td class="lang" key="r7c1">Монтаж системы объектовой охраны</td>
+              <td class="lang" key="r7c2">Монтаж системы объектовой охраны малой, средней, большой емкости</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
             <tr>
               <th scope="row">8</th>
-              <td>Обслуживание системы объектовой охраны</td>
-              <td>Техническое обслуживание систем объектовой охраны малой, средней, большой емкости</td>
-              <td>договорная</td>
+              <td class="lang" key="r8c1">Обслуживание системы объектовой охраны</td>
+              <td class="lang" key="r8c2">Техническое обслуживание систем объектовой охраны малой, средней, большой емкости</td>
+              <td class="lang" key="rc3">договорная</td>
             </tr>
           </tbody>
 
           </table>
   
-            <p>Наша основная задача предоставлять безупречные услуги охраны, которые превосходят ожидания и потребности наших клиентов, в основе которых лежат честность и профессионализм. Наша работа направлена на разработку уникальных решений для безопасности наших клиентов, которые соответствует реалиям сегодняшнего дня.</p>
+            <p class="lang" key="aftertable">Наша основная задача предоставлять безупречные услуги охраны, которые превосходят ожидания и потребности наших клиентов, в основе которых лежат честность и профессионализм. Наша работа направлена на разработку уникальных решений для безопасности наших клиентов, которые соответствует реалиям сегодняшнего дня.</p>
   
         </div>
         </div>
@@ -193,27 +193,27 @@
       <div class="process container" data-aos="fade-up">
         <div class="process_step">
           <div class="process_no">1</div>
-          <div class="process_item lang">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
+          <div class="process_item lang" key="ct1">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
           <div class="process_icon"><img src="images/icons/contract.png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">2</div>
-          <div class="process_item lang">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+          <div class="process_item lang" key="ct2">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
           <div class="process_icon"><img src="images/icons/info.png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">3</div>
-          <div class="process_item lang">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта</div>
+          <div class="process_item lang" key="ct3">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта</div>
           <div class="process_icon"><img src="images/icons/analyze (1).png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">4</div>
-          <div class="process_item lang">После согласования с Заказчиком происходит монтаж необходимого оборудования</div>
+          <div class="process_item lang" key="ct4">После согласования с Заказчиком происходит монтаж необходимого оборудования</div>
           <div class="process_icon"><img src="images/icons/camera (3).png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">5</div>
-          <div class="process_item lang">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации</div>
+          <div class="process_item lang" key="ct5">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации</div>
           <div class="process_icon"><img src="images/icons/safety (7).png" alt=""></div>
         </div>
         </div>
@@ -225,10 +225,10 @@
       <section id="about" data-aos="fade-up" style="margin-top: -5rem;">
         <div class="container">
      <div class="section-header">
-        <h2 class="whywe lang text-center" key="why_we" data-aos="fade-up">«НАШ УСПЕХ – ВАША БЕЗОПАСНОСТЬ»</h2>
+        <h2 class="whywe lang text-center" key="you_get" data-aos="fade-up">«НАШ УСПЕХ – ВАША БЕЗОПАСНОСТЬ»</h2>
       </div>
           <div class="content">
-            <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+            <p class="lang" key="services_end">С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
           </div>
           <div class="row justify-content-center mt-4">
             <div class="img-fluid col-2"><a target="_blank" href="images/minnetdarlyk/HYUNDAI/001.webp"><img class="ramkaly" style="width:100%" src="images/minnetdarlyk/HYUNDAI/001.webp" alt="Minnetdarlyk haty"></a></div>
